--- a/src/main/html/static/css/style.css
+++ b/src/main/html/static/css/style.css
@@ -111,3 +111,24 @@ ul.nav li.current {
 	border-left: 8px solid #efefef;
 	padding-left: 12px;
 }
+
+dl {
+    padding: 0.5em;
+}
+
+dt {
+  font-weight: bold;
+  color: green;
+}
+dt:after {
+  content: ":";
+}
+
+dd {
+  margin: 0 0 0 20px;
+  padding: 0 0 0.5em 0;
+}
+
+pre {
+	margin: 8px 0;
+}
