--- a/src/main/html/static/css/style.css
+++ b/src/main/html/static/css/style.css
@@ -63,8 +63,8 @@ ol li {
 }
 
 .ok {
-	color: #ad0;
-	border-left: 3px solid #ad0;
+	color: green;
+	border-left: 3px solid green;
 	padding-left: 7px;
 }
 
