--- a/src/main/html/static/css/style.css
+++ b/src/main/html/static/css/style.css
@@ -1,7 +1,6 @@
 body {
 	margin: 0;
 	padding: 0;
-	padding-top: 10px;
 	text-align: center;
 	font-family: monospace;
 	color: #1d1d1d;
@@ -13,14 +12,16 @@ body {
 	border: 0;
 	padding: 0;
 	margin: 0 auto;
+	padding-bottom: 100px;
 }
 
 h1 {
 	text-align: center;
 	font-size: 20pt;
-	padding: 7px 0;
-	margin: 20px 0;
-	border-bottom: 1px solid #adadad;
+	padding: 27px 0;
+	border-bottom: 1px solid #1b4b90;
+	background-color: #36619d;
+	color: #fff;
 }
 
 h2 {
@@ -57,9 +58,16 @@ ol li {
 
 #footer {
 	border-top: 1px solid #000;
-	margin: 12px 0;
+	margin: 0 auto;
 	padding: 12px;
 	text-align: center;
+	position: fixed; 
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	width: 800px;
+	background-color: #dce3ee;
 }
 
 .ok {
@@ -70,8 +78,12 @@ ol li {
 
 .error {
 	color: #f00;
+	background-color: #FFDEDE;
 	border-left: 3px solid #f00;
 	padding-left: 7px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 
 .errorfull {
@@ -93,17 +105,23 @@ ol li {
 	border-left: 3px solid #00688B;
 	padding-left: 7px;
 	background-color: #ADD8E6;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 
 ul.nav {
 	list-style-type:none;
 	margin:0;
-	padding:0;
+	padding: 7px 0;
+	background-color: #dce3ee;
+	color: #fff;
 }
 
 ul.nav li {
 	display:inline;
 	margin-right: 12px;
+	margin-left: 4px;
 	padding-bottom: 5px;
 }
 
@@ -112,7 +130,7 @@ ul.nav li a {
 }
 
 ul.nav li.current {
-	border-bottom: 3px solid #000;
+	border-bottom: 3px solid #1b4b90;
 }
 
 .section {
