--- a/src/main/html/static/css/style.css
+++ b/src/main/html/static/css/style.css
@@ -31,6 +31,14 @@ h2 {
 	border-bottom: 1px solid #adadad;
 }
 
+
+h3 {
+	font-size: 12pt;
+	padding: 5px 0;
+	margin: 8px 0;
+	border-bottom: 1px solid #adadad;
+}
+
 p {
 	margin-bottom: 7px;
 	padding: 6px 0;
@@ -133,11 +141,6 @@ ul.nav li.current {
 	border-bottom: 3px solid #1b4b90;
 }
 
-.section {
-	border-left: 8px solid #efefef;
-	padding-left: 12px;
-}
-
 dl {
     padding: 0.5em;
 }
@@ -156,5 +159,20 @@ dd {
 }
 
 pre {
-	margin: 8px 0;
+	margin: 4px 0;
+}
+
+pre.ok {
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	background-color: #DEFAE1;
+}
+
+div.comment {
+	border-bottom: 1px solid #efefef;
+}
+
+div.comment pre {
+	margin: 8px 34px;
 }
