--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,7 +77,6 @@ header h1 {
   color: #fff;
   line-height: 1;
   margin-bottom: 0.2em;
-  width: 540px;
 }
 
 header h2 {
@@ -85,7 +84,6 @@ header h2 {
   color: #9ddcff;
   font-weight: normal;
   line-height: 1.3;
-  width: 540px;
   letter-spacing: 0;
 }
 
@@ -124,6 +122,9 @@ aside#sidebar p.repo-owner a {
   font-weight: bold;
 }
 
+aside#sidebar h2 {
+	font-size: 24px;
+}
 #downloads {
   margin-bottom: 40px;
 }
@@ -279,7 +280,7 @@ h4:before {
   content: "////";
   color: #9ddcff;
   padding-right: 0.3em;
-  margin-left: -2.8em;
+  margin-left: -1.8em;
 }
 
 #main-content h5 {
