--- a/src/main/html/static/css/style.css
+++ b/src/main/html/static/css/style.css
@@ -67,7 +67,7 @@ ol li {
 #footer {
 	border-top: 1px solid #000;
 	margin: 0 auto;
-	padding: 12px;
+	padding: 12px 0;
 	text-align: center;
 	position: fixed; 
 	bottom: 0;
